--- a/requirements.txt
+++ b/requirements.txt
@@ -6,27 +6,40 @@ backoff==1.10.0
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
+click==7.1.2
 coreapi==2.3.3
 coreschema==0.0.4
 curl==0.0.1
+Cython==0.29.21
+dataclasses==0.8
 Django==3.1.6
 django-cors-headers==3.7.0
+gensim==3.8.1
+geographiclib==1.50
 idna==2.10
 idna-ssl==1.1.0
 itypes==1.2.0
 Jinja2==2.11.3
+joblib==1.0.1
 MarkupSafe==1.1.1
 maxminddb==2.0.3
 multidict==5.1.0
+nltk==3.5
 openapi-codec==1.3.2
 pycparser==2.20
 PyJWT==1.7.1
 pyOpenSSL==20.0.1
+Pyphen==0.10.0
 pytz==2021.1
+regex==2021.3.17
 requests==2.25.1
+scipy==1.5.4
 simplejson==3.17.2
 six==1.15.0
+smart-open==4.2.0
 sqlparse==0.4.1
+textstat==0.7.0
+tqdm==4.59.0
 typing-extensions==3.7.4.3
 uritemplate==3.0.1
 urllib3==1.26.3
